# rust_todo

./: .gitignore  Cargo.toml  todo.db  todo.db-journal
src/: lib.rs  main.rs
