[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
regex = "1"
[dependencies.rusqlite]
version = "0.26.1"
features = ["bundled"]


[lib]
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"
